Wiki UI 1 de Octubre 2024

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,5 @@ body {
 
 /* https://images.pexels.com/photos/1172542/pexels-photo-1172542.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1 */
 /* https://images.pexels.com/photos/4252895/pexels-photo-4252895.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1 */
+
+/* Possible Font => Caveat - Geologica - Manrope */
